# mAIllard

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
src/mAIllard/: __init__.py
src/mAIllard/args/: data_args.py  model_args.py  parser.py
src/mAIllard/data/: __init__.py
src/mAIllard/model/: __init__.py
src/mAIllard/train/: trainer.py
src/mAIllard/train/ppo/: run.py  trainer.py  utils.py
src/mAIllard/utils/: __init__.py
